# tinymt-cpp

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .gitlint  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
benches/: CMakeLists.txt  test-bench.cpp
docs/: CMakeLists.txt  conf.py  index.rst  reference.rst
docs/_templates/: layout.html
include/tinymt/: tinymt.h
tests/: CMakeLists.txt  test-expand.cpp  test-include.cpp  test-nothing.cpp  test-rfc8682.cpp  test-tinymt32.cpp  test-tinymt32_dc.cpp
